# weechat-relay

./: weechat-relay.cabal
src/WeeChat/Relay/: Command.hs  Messages.hs  Objects.hs
src/WeeChat/Relay/Objects/: Types.hs
