name:                weechat-relay
version:             0.1.0.0
synopsis:            WeeChat Relay protocol
-- description:         
homepage:            https://github.com/Lysxia/weechat-relay
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     
    WeeChat.Relay.Command
    WeeChat.Relay.Messages
    WeeChat.Relay.Objects
    WeeChat.Relay.Objects.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >=4.9 && <4.10,
    bytes,
    bytes-codec,
    bytestring,
    cereal,
    codec,
    connection,
    time,
    unordered-containers,
    vector,
    zlib
  hs-source-dirs:      src
  default-language:    Haskell2010
